--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
-/* === Custom Fonts === */
 @font-face {
   font-family: 'Lora';
-  src: url('./fonts/Lora-Italic-VariableFont_wght.ttf') format('truetype');
+  src: url('../Lora-Italic-VariableFont_wght.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'ROMANTIC';
-  src: url('./fonts/ROMANTIC.ttf') format('truetype');
+  src: url('../ROMANTIC.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
+
 
 /* === Color + layout variables === */
 :root {
