--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+  border: 10px solid red !important;
+}
 @font-face {
   font-family: 'ROMANTIC';
   src: url('ROMANTIC.woff2') format('woff2');
